상세 조회 API 작업 중
