# api/api/controllers/main-controller.js
@@ -40,6 +40,26 @@ exports.listInsert = function(args, res, next) {
   });
 };
 
+
+// DB Connection For ORM
+exports.getRecruitDetail = function(args, res, next) {
+  res.writeHead(200, {'content-type':'application/json; charset=UTF-8'});
+  var id = args.query.id ? args.query.id : '';
+  
+  Recruiting.findOne({
+    attributes: ['title', 'content', 'hit', 'cdate', 'udate', 'ddate', 'is_delete'],
+    where:{
+      recr_id: id
+    },
+    include: [{model: Detail,  attributes: ['stock_opt', 'skill', 'url', 'period', 'price', 'years', 'sector', 'from_home', 'more_detail']},
+              {model: Type,    attributes: ['type']},
+              {model: Writer,  attributes: ['kakao_id', 'kakao_name', 'email', 'phone']},
+              {model: Company, attributes: ['name', 'location']}]
+  }).then((value) => {
+    return res.end(JSON.stringify(value));
+  });
+};
+
 // DB Connection For ORM
 exports.getRecruitList = function(args, res, next) {
   res.writeHead(200, {'content-type':'application/json; charset=UTF-8'});
@@ -47,9 +67,10 @@ exports.getRecruitList = function(args, res, next) {
 
   const beforeDay = 60;
   var cdateCondition = new Date(Date.parse(new Date()) - beforeDay * 1000 * 60 * 60 * 24);
-  cdateCondition = cdateCondition.getFullYear() + '-' + cdateCondition.getMonth() + 1 + '-' + cdateCondition.getDate();
+  cdateCondition = cdateCondition.getFullYear() + '-' + (cdateCondition.getMonth() + 1) + '-' + cdateCondition.getDate();
   
   Recruiting.findAll({
+    attributes: ['recr_id', 'title', 'content', 'hit', 'cdate', 'udate', 'ddate', 'is_delete'],
     where:{
       cdate: {
         [Op.gte]: cdateCondition
@@ -61,6 +82,10 @@ exports.getRecruitList = function(args, res, next) {
               {model: Writer,  attributes: ['kakao_id', 'kakao_name', 'email', 'phone']},
               {model: Company, attributes: ['name', 'location']}]
   }).then((value) => {
+    // value.map(v => {
+    //   v[0].recr_id.data = 1;
+    //   return v;
+    // })
     return res.end(JSON.stringify(value));
   });
 };
